objects/Copado_Notification__c.object
<CustomObject>
    <description>Used for Copado Notifications using the Streaming API.</description>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <externalId>true</externalId>
        <label>AttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent2Id__c</fullName>
        <label>Parent2Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Copado Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>isFinished__c</columns>
        <columns>isSuccess__c</columns>
        <columns>status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ParentId__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CopadoNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>